@@ -3834,4 +3834,7 @@ with \Y. ---/
     aez
     aeqwerty
 
+/.(*F)/
+    \P\Pabc
+
 /-- End of testinput2 --/
